--- a/Multiprjct/tests/UnitTests/UnitTests.csproj
+++ b/Multiprjct/tests/UnitTests/UnitTests.csproj
@@ -22,4 +22,11 @@
      <ProjectReference Include="..\..\src\Web\Web.csproj" />
    </ItemGroup>
 
+   <ItemGroup>
+     <Reference Include="Web.Views">
+       <HintPath>..\..\src\Web\obj\Debug\netcoreapp2.2\Web.Views.dll</HintPath>
+     </Reference>
+   </ItemGroup>
+
+
 </Project>
